Fixed "Home" page horizontal scroll on iPhone 5 and smaller phones

--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -78,8 +78,12 @@
 }
 
 .image-menu{
-    width: 350px;
+    max-width: 350px;
     height: auto;
+}
+
+#menu-img1{
+    margin-right: 50px;
 }
 
 #text1-menu-home{
@@ -181,6 +185,9 @@
     #image1 img{
         width: 100vw;
     }
+    #left{
+        margin-bottom: 10px;
+    }
     #left > img{
         display: none;
     }
@@ -192,6 +199,12 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+    }
+    .image-menu{
+        max-width: 100%;
+    }
+    #menu-img1{
+        margin-right: 0;
     }
     #image1Menu{
         display: flex;
